syntax = "proto3";

option go_package="pkg/service/proto";
import "google/protobuf/timestamp.proto";


message Food {
    string id = 1;
    float container_weight = 2;
    float container_capacity = 3;
    string name = 4;
    string account_id = 5;
    string nfc_uid = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

service FoodService {
    
}